# contactbook

./: README.md  docker-compose.yml  entrypoint.sh  pyproject.toml
backend/: .coveragerc  pytest.ini
backend/apps/: consts.py  factories.py  models.py
backend/apps/contactbook/: api_schemas.py  apps.py  factories.py  models.py  serializers.py  service.py  urls.py  views.py
backend/apps/contactbook/migrations/: 0001_initial.py  0002_alter_contactbook_birthday_alter_contactbook_phone.py  0003_alter_contactlabel_unique_together.py  0004_contactbook_labels_alter_contactlabel_contact_and_more.py
backend/apps/label/: apps.py  factories.py  models.py  serializers.py  urls.py  views.py
backend/apps/label/migrations/: 0001_initial.py
backend/conf/: urls.py
backend/conf/settings/: base.py  local.py  prod.py
backend/tests/: conftest.py
backend/tests/contactbook/: conftest.py  test_service.py  test_views.py
backend/tests/label/: conftest.py  test_views.py
